-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-beta1
-
None
- Open a large qbs project
- While it is being parsed, try to jump to a line in the currently open file by Ctrl-L.
- A spinning icon is displayed, and the locator doesn't respond.
| For Gerrit Dashboard: QTCREATORBUG-14640 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 144142,11 | File search: Avoid use of QtConcurrent | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 145769,4 | Locator: Avoid use of QtConcurrent | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 147564,2 | QMakeProjectManager: Reduce priority of parsing threads. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |